# marvel-snap-ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
client/: main.py
client/src/: __init__.py  game_client.py  game_state.py  log_parser.py
tests/: test_game_state.py  test_log_parser.py
tests/fixtures/: GameState.json  game_state_pre_game.json  game_state_turn_4.json  game_state_turn_6.json  test_game_state.py
