[tool.poetry]
name = "marvel-snap-ai"
version = "0.1.0"
description = ""
authors = ["Aidan Harvey-Nelson <firzen2550@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["rllib"], version = "^2.34.0"}
torch = "^2.4.0"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
